JVM can't be started w/ -XX:+EnableJVMCI -XX:+UseJVMCICompiler and default TypeProfileWidth

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b89

        #section:main
        ----------messages:(3/627)----------
        command: main -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -Djvmci.compiler=EmptyCompiler -Xbootclasspath/a:. -Xmixed -XX:+UseJVMCICompiler -XX:-BootstrapJVMCI -Dcompiler.jvmci.events.JvmciNotifyInstallEventTest.noevent=false compiler.jvmci.events.JvmciNotifyInstallEventTest
        reason: User specified action: run main/othervm -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -Djvmci.compiler=EmptyCompiler -Xbootclasspath/a:. -Xmixed -XX:+UseJVMCICompiler -XX:-BootstrapJVMCI -Dcompiler.jvmci.events.JvmciNotifyInstallEventTest.noevent=false compiler.jvmci.events.JvmciNotifyInstallEventTest
        elapsed time (seconds): 0.014
        ----------System.out:(0/0)----------
        ----------System.err:(3/173)----------
        intx TypeProfileWidth=8 is outside the allowed range [ 0 ... 4 ]
        Error: Could not create the Java Virtual Machine.
        Error: A fatal exception has occurred. Program will exit.
        ----------rerun:(26/2805)*----------

              Assignee:
              Zoltan Majo (Inactive)
              Reporter:
              Igor Ignatyev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: