8139377: JVM can't be started w/ -XX:+EnableJVMCI -XX:+UseJVMCICompiler and default TypeProfileWidth

Raise upper bound of TypeProfileWidth from 4 to 8.

Reviewed-by: iveresov, twisti